# arbi

./: .env.example  .gitignore  6880900.json  Cargo.toml  README.md
.github/workflows/: ci.yml
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx  util.ts
dashboard/src/api/: client.ts  types.ts
dashboard/src/components/center/: ExecutionLog.tsx  ProfitChart.tsx
dashboard/src/components/layout/: Header.tsx  Shell.tsx
dashboard/src/components/left/: ConfigPanel.tsx  GasPanel.tsx  Portfolio.tsx
dashboard/src/components/right/: AlertBar.tsx  OpportunityFeed.tsx  TransactionLog.tsx
dashboard/src/components/shared/: Chip.tsx  StatCard.tsx  Table.tsx
dashboard/src/hooks/: useApi.ts  useSnapshot.ts
dashboard/src/styles/: components.css  layout.css  reset.css  tokens.css
src/: account.rs  arbitrager.rs  constants.rs  errors.rs  gas.rs  health.rs  lib.rs  main.rs  opportunity.rs  rpc.rs  transaction.rs  ws.rs
src/dashboard/: api.rs  state.rs
src/ekubo/: calculator.rs  evaluation.rs  events.rs  mod.rs  paths.rs  pool.rs  state.rs  swap.rs  sync.rs
utils/: calculate_swap.rs  find_opportunity.rs  sync_state.rs
