[package]
name = "ekubo-arb"
version = "0.1.0"
edition = "2021"
description = "Starknet arbitrage bot monitoring Ekubo DEX pools"
license = "MIT"
repository = "https://github.com/gluskin/ekubo-arb"

[lib]
name = "ekubo_arb"
path = "src/lib.rs"

[[bin]]
name = "ekubo-arb"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full", "process", "signal"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
starknet = { package = "starknet-rust", version = "0.18" }
thiserror = "1.0"
axum = "0.7"
ruint = "1"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
parking_lot = "0.12"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[[example]]
name = "sync_state"
path = "utils/sync_state.rs"

[[example]]
name = "calculate_swap"
path = "utils/calculate_swap.rs"

[[example]]
name = "find_opportunity"
path = "utils/find_opportunity.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
